@@ -157,7 +157,7 @@ gtk_item_factory_init (GtkItemFactory	    *ifactory)
  *
  * Beware that the returned object does not have a floating reference.
  *
- * Deprecated: 2.4:	
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkItemFactory*
 gtk_item_factory_new (GType	     container_type,
@@ -374,7 +374,7 @@ gtk_item_factory_add_item (GtkItemFactory		*ifactory,
  * 
  * Initializes an item factory.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */  
 void
 gtk_item_factory_construct (GtkItemFactory	*ifactory,
@@ -429,7 +429,7 @@ gtk_item_factory_construct (GtkItemFactory	*ifactory,
  * <literal>"&lt;name&gt;"</literal> prefix of @path as the @path argument 
  * for gtk_item_factory_new().
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkItemFactory*
 gtk_item_factory_from_path (const gchar      *path)
@@ -525,7 +525,7 @@ gtk_item_factory_finalize (GObject *object)
  *
  * Obtains the item factory from which a widget was created.
  *
- * Deprecated: 2.4
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkItemFactory*
 gtk_item_factory_from_widget (GtkWidget	       *widget)
@@ -558,7 +558,7 @@ gtk_item_factory_from_widget (GtkWidget	       *widget)
  * path specified in gtk_item_factory_new() with the path specified in the 
  * #GtkItemFactoryEntry from which the widget was created.)
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 G_CONST_RETURN gchar*
 gtk_item_factory_path_from_widget (GtkWidget	    *widget)
@@ -589,7 +589,7 @@ gtk_item_factory_path_from_widget (GtkWidget	    *widget)
  *
  * Creates the menu items from the @entries.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_create_items (GtkItemFactory	   *ifactory,
@@ -611,7 +611,7 @@ gtk_item_factory_create_items (GtkItemFactory	   *ifactory,
  *
  * Creates the menu items from the @entries.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_create_items_ac (GtkItemFactory      *ifactory,
@@ -647,7 +647,7 @@ gtk_item_factory_create_items_ac (GtkItemFactory      *ifactory,
  * submenu, then the submenu is returned. If you are interested in the menu 
  * item, use gtk_item_factory_get_item() instead.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkWidget*
 gtk_item_factory_get_widget (GtkItemFactory *ifactory,
@@ -700,7 +700,7 @@ gtk_item_factory_get_widget (GtkItemFactory *ifactory,
  * If there are multiple items with the same action, the result is 
  * undefined.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkWidget*
 gtk_item_factory_get_widget_by_action (GtkItemFactory *ifactory,
@@ -737,7 +737,7 @@ gtk_item_factory_get_widget_by_action (GtkItemFactory *ifactory,
  * submenu, then the item is returned. If you are interested in the submenu, 
  * use gtk_item_factory_get_widget() instead.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkWidget*
 gtk_item_factory_get_item (GtkItemFactory *ifactory,
@@ -768,7 +768,7 @@ gtk_item_factory_get_item (GtkItemFactory *ifactory,
  * Obtains the menu item which was constructed from the first 
  * #GtkItemFactoryEntry with the given @action.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 GtkWidget*
 gtk_item_factory_get_item_by_action (GtkItemFactory *ifactory,
@@ -906,7 +906,7 @@ gtk_item_factory_parse_path (GtkItemFactory *ifactory,
  *
  * Creates an item for @entry.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_create_item (GtkItemFactory	     *ifactory,
@@ -1140,7 +1140,7 @@ gtk_item_factory_create_item (GtkItemFactory	     *ifactory,
  *
  * Creates the menu items from the @entries.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_create_menu_entries (guint              n_entries,
@@ -1226,7 +1226,7 @@ gtk_item_factory_create_menu_entries (guint              n_entries,
  * 
  * Deletes all widgets constructed from the specified path.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factories_path_delete (const gchar *ifactory_path,
@@ -1287,7 +1287,7 @@ gtk_item_factories_path_delete (const gchar *ifactory_path,
  * Deletes the menu item which was created for @path by the given
  * item factory.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_delete_item (GtkItemFactory         *ifactory,
@@ -1317,7 +1317,7 @@ gtk_item_factory_delete_item (GtkItemFactory         *ifactory,
  * Deletes the menu item which was created from @entry by the given
  * item factory.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_delete_entry (GtkItemFactory         *ifactory,
@@ -1352,7 +1352,7 @@ gtk_item_factory_delete_entry (GtkItemFactory         *ifactory,
  * Deletes the menu items which were created from the @entries by the given
  * item factory.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_delete_entries (GtkItemFactory         *ifactory,
@@ -1399,7 +1399,7 @@ gtk_item_factory_menu_pos (GtkMenu  *menu,
  * gtk_item_factory_popup_with_data(). This data is available until the menu
  * is popped down again.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 gpointer
 gtk_item_factory_popup_data_from_widget (GtkWidget *widget)
@@ -1424,7 +1424,7 @@ gtk_item_factory_popup_data_from_widget (GtkWidget *widget)
  * gtk_item_factory_popup_with_data(). This data is available until the menu
  * is popped down again.
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 gpointer
 gtk_item_factory_popup_data (GtkItemFactory *ifactory)
@@ -1466,7 +1466,7 @@ ifactory_delete_popup_data (GtkObject	   *object,
  * The operation of the @mouse_button and the @time_ parameter is the same
  * as the @button and @activation_time parameters for gtk_menu_popup().
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_popup (GtkItemFactory		*ifactory,
@@ -1505,7 +1505,7 @@ gtk_item_factory_popup (GtkItemFactory		*ifactory,
  * The operation of the @mouse_button and the @time_ parameters is the same
  * as the @button and @activation_time parameters for gtk_menu_popup().
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */
 void
 gtk_item_factory_popup_with_data (GtkItemFactory	*ifactory,
@@ -1564,7 +1564,7 @@ gtk_item_factory_popup_with_data (GtkItemFactory	*ifactory,
  * Sets a function to be used for translating the path elements before they
  * are displayed. 
  *
- * Deprecated: 2.4:
+ * Deprecated: 2.4: Use #GtkUIManager instead.
  */ 
 void
 gtk_item_factory_set_translate_func (GtkItemFactory      *ifactory,
